[tool.poetry]
name = "beep"
version = "0.1.0"
description = ""
authors = ["Nick Whitt <nwhitt@jbssolutions.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
fastapi = {extras = ["all"], version = "^0.66.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
